--- a/frontend_2/src/app/@theme/components/header/header.component.html
+++ b/frontend_2/src/app/@theme/components/header/header.component.html
@@ -3,12 +3,13 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <a class="logo" href="#" (click)="navigateHome()"><img src="assets\images\app\across-logo.png" style="height: 64px" /></a>
+    <!--<a class="logo" href="#" (click)="navigateHome()"><img src="assets\images\app\dmm-logo.png" style="height: 64px" /></a>-->
+    <h6 style="padding-top:10px">Data Model Mapper</h6>
   </div>
  </div>
 
 <div class="header-container">
- 
+
     <!-- <nb-icon nbPrefix icon="globe-outline"></nb-icon> -->
     <nb-select size="tiny" placeholder="Language" (selectedChange)="changeLang($event)" [selected]="userLanguage" status="primary">
       <nb-option *ngFor="let lang of languages" [value]="lang.lan" class="d-flex flex-row align-items-center lang-select">
@@ -19,9 +20,9 @@
         </nb-user>
       </nb-option>
     </nb-select>
- 
+
   <nb-actions size="small">
-    
+
     <!--<nb-action class="control-item" icon="bell-outline" badgeText="1" badgeStatus="warning" badgePosition="bottom right"></nb-action>-->
     <nb-action class="user-action">
       <nb-user
@@ -34,7 +35,7 @@
       <ng-template #elseBlock>
         <button outline nbButton>
           <a routerLink="/login" routerLinkActive="button-outline-basic-active-background-color">{{ 'login.enter_button' | translate }}</a>
-        </button>       
+        </button>
       </ng-template>
     </nb-action>
   </nb-actions>
