--- a/frontend_2/src/app/@theme/styles/themes.scss
+++ b/frontend_2/src/app/@theme/styles/themes.scss
@@ -120,7 +120,7 @@ $nb-themes: nb-register-theme((
 
 
     /* CUSTOM */
- 
+
   /*Context Menu*/
   context-menu-border-radius: 0px,
   /* header */
@@ -166,7 +166,7 @@ $nb-themes: nb-register-theme((
   button-filled-success-background-color: #00d68f,
   button-filled-success-hover-background-color: #2ce69b
 
-), across, default);
+), dmm, default);
 
 
 $nb-themes: nb-register-theme((
