--- a/frontend_2/src/app/pages/data-model-mapper/dialog-dataMap/dialog-dataMap.component.html
+++ b/frontend_2/src/app/pages/data-model-mapper/dialog-dataMap/dialog-dataMap.component.html
@@ -89,7 +89,7 @@
     &nbsp;
     <button style="float: right" nbButton appearance="outline" shape="semi-round" size="medium" status="info"
       (click)="confirm()">
-      <i class="mx-1">{{ 'general.connectors.confirm' | translate }}</i>
+      <i class="mx-1">{{ 'general.dmm.confirm' | translate }}</i>
     </button>
   </nb-card-footer>
 </nb-card>
