--- a/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
+++ b/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
@@ -1,10 +1,10 @@
 <nb-card>
   <nb-card-header class="d-flex align-content-center justify-content-between">
     <div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
-    <div *ngIf="updateAdapter">
+    <div *ngIf="!save || updateAdapter">
       <h3>{{ 'general.dmm.edit' | translate }}</h3>
     </div>
-    <div *ngIf="save || !updateAdapter">
+    <div *ngIf="save">
       <h3>{{ 'general.dmm.add' | translate }}</h3>
     </div>
     <button nbButton appearance="outline" shape="semi-round" size="tiny" status="info" (click)="cancel()">
