--- a/frontend/src/app/pages/home/status/status.component.html
+++ b/frontend/src/app/pages/home/status/status.component.html
@@ -1,1 +1,11 @@
-<p>status works!</p>
+<div *ngIf="completed; else unnderDevelopment">
+  <button nbButton ghost shape="rectangle" size="small" status="success">
+    <i class="material-icons">check_circle</i>
+  </button>
+</div>
+
+<ng-template #unnderDevelopment>
+  <button nbButton ghost nbTooltip="Under Development" shape="rectangle" size="small" status="warning">
+    <i class="material-icons">check_circle</i>
+  </button>
+</ng-template>
