--- a/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
+++ b/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
@@ -28,15 +28,29 @@
           [ngModelOptions]="{standalone: true}" />
         <br>
         <br>
+        <label for="description" fullWidth>{{ 'general.adapters.description' | translate }}</label>
+        <br>
+        <input [(ngModel)]="description" nbInput type="text" fullWidth
+          placeholder="{{ 'general.adapters.description' | translate }}" [ngModelOptions]="{standalone: true}" />
+        <br>
+        <br>
+        <label for="status" fullWidth>{{ 'general.adapters.status' | translate }}</label>
+        <br>
+        <input [(ngModel)]="status" nbInput type="text" fullWidth
+          placeholder="{{ 'general.adapters.status' | translate }}" [ngModelOptions]="{standalone: true}" />
+        <br>
+        <br>
         <h3>
           <br>
           <button *ngIf="!name || !adapterId" disabled nbButton appearance="outline" shape="semi-round" size="medium"
             status="info" (click)="confirm()">
-            <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) :  ('general.dmm.confirmEdit' | translate) }}</i>
+            <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' |
+              translate) }}</i>
           </button>
           <button *ngIf="name && adapterId" nbButton appearance="outline" shape="semi-round" size="medium" status="info"
             (click)="confirm()">
-            <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) :  ('general.dmm.confirmEdit' | translate) }}</i>
+            <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' |
+              translate) }}</i>
           </button>
           &nbsp;
         </h3>
