--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -1,9 +1,9 @@
 <nb-card>
   <nb-card-header class="h3"> Data Model Mapper </nb-card-header>
   <nb-card-body>
-    <p>Select map settings from below or upload your map settings.
+    <p>Select map record from below or upload your map record.
     </p>
-    <nb-select placeholder="Select map settings" size="small" [(ngModel)]=selectMap
+    <nb-select placeholder="Select map record" size="small" [(ngModel)]=selectMap
       (ngModelChange)="mapChanged($event)">
       <nb-option *ngFor="let map of maps" value={{map.id}}>{{map.name}}</nb-option>
     </nb-select>
