add schema editor

--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -108,6 +108,12 @@
             </button>
             <br>
           </div>
+          <div style="height:500px" id="schemaEditor"></div>
+          <div class="mb-2">
+            <p>Set your map settings.
+            </p>
+            <br><br><br>
+          </div>
           <div style="height:500px" id="jsoneditor2"></div>
         </nb-accordion-item-body>
       </nb-accordion-item>
