--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -109,11 +109,12 @@
             <br>
           </div>
           <div style="height:500px" id="schemaEditor"></div>
+          <div style="padding-top:50px"></div>
           <div class="mb-2">
             <p>Set your map settings.
             </p>
-            <br><br><br>
           </div>
+          <div style="padding-top:1px"></div>
           <div style="height:500px" id="jsoneditor2"></div>
         </nb-accordion-item-body>
       </nb-accordion-item>
