--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -8,6 +8,10 @@
       <nb-option *ngFor="let map of maps" value={{map.id}}>{{map.name}}</nb-option>
     </nb-select>
     <div class="row justify-content-center">
+      <button nbButton class="mx-4" shape="rectangle" size="medium" status="info" (click)="reset()">
+        {{ 'general.dmm.create_new' | translate }}
+        <i class="mx-1 material-icons">create new</i>
+      </button>
       <button nbButton class="mx-4" shape="rectangle" size="medium" status="primary" (click)="saveAdapter()">
         {{ 'general.dmm.save_as_new' | translate }}
         <i class="mx-1 material-icons">save</i>
