fix bug not loading map options

--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -50,6 +50,14 @@
               <nb-option value="json">JSON</nb-option>
             </nb-select>
           </div>
+          <div style="padding-top:30px"></div>
+          <p>Select a source file from below or upload your source file.
+          </p>
+          <nb-select placeholder="Select Json Schema" size="small" [(ngModel)]="selectedSource" (ngModelChange)="sourceChanged($event)">
+            <nb-option *ngFor="let source of sources" value={{source.id}}>{{source.name}}</nb-option>
+          </nb-select>
+          <br><br><br>
+          <div style="padding-top:10px"></div>
           <div class="mb-1" style="display:none;" id="json-input">
             <div class="mb-2">
               <br><br>
