--- a/frontend/src/app/pages/data-model-mapper/export-file/export-file.component.html
+++ b/frontend/src/app/pages/data-model-mapper/export-file/export-file.component.html
@@ -11,31 +11,23 @@
   <nb-card-body class="m-2 p-4">
     <h6>
       <form>
-        <label for="mapId" fullWidth>{{ 'general.dmm.mapId' | translate }}</label>
+        <label for="Mode" fullWidth>{{ 'general.dmm.mode' | translate }}</label>
         <br>
-        <input [(ngModel)]="adapterId" nbInput type="text" fullWidth placeholder="{{ 'general.adapters.adapterId' | translate }}"
-          [ngModelOptions]="{standalone: true}" />
-        <br>
-        <br>
-        <label for="name" fullWidth>{{ 'general.adapters.name' | translate }}</label>
-        <br>
-        <input [(ngModel)]="name" nbInput type="text" fullWidth placeholder="{{ 'general.adapters.name' | translate }}"
-          [ngModelOptions]="{standalone: true}" />
-        <br>
-        <br>
-        <h3 class="container">
-          <br>
-          <button class="center" *ngIf="!name || !adapterId" disabled nbButton appearance="outline" shape="semi-round" size="medium"
-            status="info" (click)="confirm()">
-            <i class="mx-1">{{'general.dmm.export' | translate}}</i>
-          </button>
-          <button class="center" *ngIf="name && adapterId" nbButton appearance="outline" shape="semi-round" size="medium" status="info"
-            (click)="save()">
-            <i class="mx-1">{{'general.dmm.export' | translate}}</i>
-          </button>
-          &nbsp;
-        </h3>
+        <nb-select fullWidth placeholder="Under development" [(ngModel)]="mode" (click)="fixBrokenPageBug()"
+          [ngModelOptions]="{standalone: true}">
+          <nb-option value="snippet">Snippet</nb-option>
+          <nb-option value="file">File</nb-option>
+        </nb-select>
       </form>
     </h6>
+    <br>
+    <br>
+    <h3>
+      <br>
+      <button nbButton appearance="outline" shape="semi-round" size="medium"
+        status="info" (click)="save()">
+        <i class="mx-1">{{ 'general.dmm.confirmSave' | translate}}</i>
+      </button>
+    </h3>
   </nb-card-body>
 </nb-card>
