--- a/frontend/src/app/pages/data-model-mapper/export-file/export-file.component.html
+++ b/frontend/src/app/pages/data-model-mapper/export-file/export-file.component.html
@@ -1,4 +1,4 @@
-<nb-card style="width: 500px;">
+<nb-card style="width: 500px; height: 410px">
   <nb-card-header class="d-flex align-content-center justify-content-between">
     <div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
     <div>
@@ -22,12 +22,11 @@
     </h6>
     <br>
     <br>
-    <h3>
-      <br>
-      <button nbButton appearance="outline" shape="semi-round" size="medium"
-        status="info" (click)="save()">
-        <i class="mx-1">{{ 'general.dmm.confirmSave' | translate}}</i>
-      </button>
-    </h3>
   </nb-card-body>
+  <div class="center">
+    <br>
+    <button nbButton appearance="outline" shape="semi-round" size="medium" status="info" (click)="save()">
+      <i class="mx-1">{{ 'general.dmm.confirmSave' | translate}}</i>
+    </button>
+  </div>
 </nb-card>
