--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -87,6 +87,10 @@
               <button nbButton class="mr-2" shape="rectangle" size="small" (click)="import('source','csv')">
                 {{ 'general.editor.import' | translate }}
                 <i class="mx-1 fas fa-file-import fa-lg"></i>
+              </button> &nbsp;
+              <button nbButton class="mr-2" shape="rectangle" size="small" (click)="updateCSVTable()">
+                {{ 'general.editor.update_field_list' | translate }}
+                <i class="mx-1 fas fa-file-import fa-lg"></i>
               </button>
               <nb-select placeholder="Separator" size="small" [(selected)]="separatorItem">
                 <nb-option value=",">Comma separator</nb-option>
@@ -95,7 +99,7 @@
               </nb-select>
             </div>
             <div class="mb-3" id="csveditor">
-              <nb-tabset (click)="updateCSVTable()" (focusout)="updateCSVTable()" (blur)="updateCSVTable()">
+              <nb-tabset>
                 <nb-tab tabTitle="CSV text">
                   <textarea id="textarea" nbInput rows="10" fullWidth=true placeholder="Enter CVS text..."
                     [(ngModel)]="csvSourceData"></textarea>
@@ -134,7 +138,7 @@
             </p>
           </div>
           <div style="padding-top:1px"></div>
-          <div (click)="updateCSVTable()" (focusout)="updateCSVTable()" (blur)="updateCSVTable()" style="height:500px"
+          <div style="height:500px"
             id="jsoneditor2"></div>
         </nb-accordion-item-body>
       </nb-accordion-item>
