transform component modified 2

--- a/frontend/src/app/pages/home/transform/transform.component.scss
+++ b/frontend/src/app/pages/home/transform/transform.component.scss
@@ -1,4 +1,4 @@
-label {
+/*label {
   width: 180px;
   clear: left;
   text-align: right;
@@ -18,7 +18,7 @@ label {
   right: 0.625rem;
   top: 1rem;
   cursor: pointer;
-}
+}*/
 
 //nb-card {
   //text-align: center;
