config editor added

--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -157,6 +157,9 @@
           Output
         </nb-accordion-item-header>
         <nb-accordion-item-body>
+          <p>Set transform config.
+          </p>
+          <div style="height:500px" id="configEditor"></div>
           <br> <br>
           <button nbButton class="mr-2" shape="rectangle" size="small" (click)="testAdapter()">
             {{ 'general.dmm.preview' | translate }}
